[gd_scene load_steps=4 format=3 uid="uid://chrtqmrlyqq0k"]

[ext_resource type="Script" path="res://Code/UI/GameOver.gd" id="1_fltgx"]
[ext_resource type="FontFile" uid="uid://bdkmmlc2t24bh" path="res://art/UI/PIXEL-LI.TTF" id="2_3xs3j"]
[ext_resource type="AudioStream" uid="uid://bbv6sysg5542x" path="res://Audio/Game Over.mp3" id="3_takvk"]

[node name="GameOver" type="CanvasLayer"]
script = ExtResource("1_fltgx")

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -137.0
offset_top = -156.0
offset_right = 137.0
offset_bottom = -83.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_3xs3j")
theme_override_font_sizes/font_size = 100
text = "Game Over"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = -46.5
offset_right = 43.5
offset_bottom = 46.5
grow_horizontal = 2
grow_vertical = 2

[node name="Retry" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Retry"

[node name="RetryNux" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Retry Nux Mode"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_takvk")
volume_db = 10.0
autoplay = true

[connection signal="pressed" from="VBoxContainer/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="VBoxContainer/RetryNux" to="." method="_on_retry_nux_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
